# llod

./: .gitignore  README.md  app.py  calc.py  llodlloq.py  pyproject.toml
.github/workflows/: tests.yml
.streamlit/: config.toml
data/: benzoylecgonine.csv  estrone.csv
src/: llodlloq.py
tests/: __init__.py  conftest.py  test_app.py  test_calc.py  test_llodlloq.py  test_rsquared.py
