[project]
name = "llodlloq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pyright>=1.1.401",
    "ruff>=0.11.11",
]
