[project]
name = "llodlloq"
version = "0.1.0"
description = "Calculate Limit of Detection (LLOD) and Limit of Quantification (LLOQ) from concentration-response data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "pyright>=1.1.401",
    "ruff>=0.11.11",
]
