[project]
name = "llodlloq"
version = "0.1.0"
description = "Calculate Limit of Detection (LLOD) and Limit of Quantification (LLOQ) from concentration-response data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "pyright>=1.1.401",
    "ruff>=0.11.11",
    "pytest>=7.4.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 200
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 200
target-version = "py310"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
]
lint.select = ["E", "F", "B"]
lint.ignore = []
lint.fixable = ["ALL"]
lint.unfixable = []
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
